[project]
name = "philipstv"
dynamic = ["version"]
description = "CLI and library to control Philips Android-powered TVs."
readme = "README.rst"
requires-python = ">=3.10"
license = { text = "MIT" }
maintainers = [{ name = "Bazyli Cyran", email = "bazyli@cyran.dev" }]
keywords = ["cli", "tv", "api-wrapper", "philips", "ambilight"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["requests>=2.27.1", "pydantic>=2.4.2"]

[project.optional-dependencies]
cli = ["click>=8.2.0", "appdirs>=1.4.4"]
docs = ["sphinx>=7.2.6", "furo>=2025.7.19", "enum-tools[sphinx]>=0.13.0"]

[project.urls]
repository = "https://github.com/bcyran/philipstv"
documentation = "https://philipstv.readthedocs.io"

[project.scripts]
philipstv = "philipstv.__main__:wrapped_cli"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
tag_regex = "^(?P<version>\\d+\\.\\d+\\.\\d+.*)$"

[tool.hatch.build.hooks.vcs]
version-file = "src/philipstv/_version.py"

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/philipstv"]

[tool.mypy]
strict = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip = ["src/philipstv/_version.py"]

[tool.coverage.run]
source = ["philipstv"]
omit = ["src/philipstv/__main__.py", "src/philipstv/_version.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true
exclude_lines = ["raise NotImplementedError", "pass"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "black>=25.9.0",
    "mypy>=1.17",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "types-requests>=2.32.4",
    "requests-mock>=1.12.1",
    "pytest-cov>=7.0.0",
    "types-appdirs>=1.4.3",
    "sphinx-autobuild>=2024.10.3",
    "poethepoet>=0.39.0",
]

[tool.poe.tasks]
# Individual quality check tasks
test = "pytest --cov=philipstv --cov-config=pyproject.toml tests/"
mypy = "mypy src/ tests/"
black = "black --check --diff src/ tests/"
flake8 = "flake8 src/ tests/"
isort = "isort --check --diff src/ tests/"
format-black = "black src/ tests/"
format-isort = "isort src/ tests/"

[tool.poe.tasks.check]
help = "Run all quality checks (tests, type checking, formatting, linting)"
sequence = ["test", "mypy", "black", "flake8", "isort"]

[tool.poe.tasks.format]
help = "Auto-format code with black and isort"
sequence = ["format-black", "format-isort"]

[tool.poe.tasks.build]
help = "Build package distributions"
cmd = "uv build"
